--- a/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj
+++ b/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj
@@ -37,7 +37,7 @@
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.10586.0</WindowsTargetPlatformMinVersion>
     <ApplicationTypeRevision>10.0</ApplicationTypeRevision>
-    <ProjectName>GhostWalker</ProjectName>
+    <ProjectName>Direct3D UWP Game3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
