Added GameObject class

--- a/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj.filters
+++ b/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj.filters
@@ -5,22 +5,54 @@
       <UniqueIdentifier>c2247815-8d79-476f-b617-5b16a107fa31</UniqueIdentifier>
       <Extensions>bmp;fbx;gif;jpg;jpeg;tga;tiff;tif;png</Extensions>
     </Filter>
+    <Filter Include="GameObjects">
+      <UniqueIdentifier>{323a7306-8b94-4bf8-ba2d-8e9e6690e754}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Render">
+      <UniqueIdentifier>{3621c721-982d-4f97-ae9a-57cee46fd3c9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Utilities">
+      <UniqueIdentifier>{cf8d96ea-6db7-4693-be09-eeeb8ed954ec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resources">
+      <UniqueIdentifier>{10e32c48-7cd2-4e77-93f1-449639d9b062}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="DeviceResource.cpp" />
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="DeviceResource.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="StepTimer.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Renderer.h" />
-    <ClInclude Include="DeviceResource.h" />
+    <ClInclude Include="IDrawable.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="StepTimer.h">
+      <Filter>Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="DeviceResource.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="IUpdatable.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Logo.scale-200.png">
