--- a/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj
+++ b/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj
@@ -197,6 +197,9 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DeviceResource.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="IDrawable.h" />
+    <ClInclude Include="IUpdatable.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="StepTimer.h" />
@@ -205,6 +208,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DeviceResource.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
