--- a/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj.filters
+++ b/Direct3D UWP Game3/Direct3D UWP Game3.vcxproj.filters
@@ -35,7 +35,10 @@
     <ClCompile Include="Sphere.cpp">
       <Filter>GameObjects</Filter>
     </ClCompile>
-    <ClCompile Include="Walls.cpp" />
+    <ClCompile Include="Wall.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Wheel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -56,7 +59,10 @@
     <ClInclude Include="Sphere.h">
       <Filter>GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="Walls.h" />
+    <ClInclude Include="Wall.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Wheel.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Logo.scale-200.png">
